styles/index.css
/* import::google fonts font  */
@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap");

/* basic common styles  */
* {
  padding: 0;
  margin: 0;
  outline: 0;
  font-family: "Work Sans", sans-serif;
}

a {
  text-decoration: none;
}

li {
  list-style: none;
}

.full-wrapper {
  width: 100%;
}

.container {
  width: 960px;
  margin: 0 auto;
}

.description {
  color: #727272;
}

.primary-btn {
  color: #fff;
  border: 0;
  font-size: 20px;
  font-weight: 600;
  background-color: #ff900e;
  padding: 20px 25px;
  border-radius: 5px;
}

.primary-color {
  color: #ff900e;
}

/* header section styles  */
header {
  padding: 50px 0;
  background-color: #ff8f0e2a;
}
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

nav h1 {
  color: #131313;
  font-size: 45px;
  font-weight: 700;
}

nav ul {
  display: flex;
  justify-content: space-around;
}

nav ul li {
  margin-right: 40px;
}

nav ul li a {
  color: #727272;
  font-size: 18px;
  font-weight: 500;
}

/* banner section styles  */
.banner .banner-description {
  margin: 115px 0 50px;
  text-align: center;
}

.banner .banner-title {
  color: #000;
  font-size: 64px;
  font-weight: 700;
  margin-bottom: 25px;
}

.banner .banner-description .description {
  margin-bottom: 32px;
}

.banner .banner-image img {
  width: 100%;
}

/* feature section styles */
.feature {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 73px;
  align-items: center;
  margin: 85px 0 130px;
}

.feature .feature-group-image {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 24px;
}

.feature .feature-group-image img {
  width: 100%;
}

.feature-title {
  color: #727272;
  font-size: 45px;
  font-weight: 500;
  margin-bottom: 24px;
}

.feature-title .color-black {
  color: #000;
  font-weight: 700;
}

.feature-title .primary-color {
  font-weight: 700;
}

.feature .feature-description .description {
  margin-bottom: 32px;
}

/* our-feature section styles  */
.our-features {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-column-gap: 55px;
  margin-bottom: 130px;
}

.title {
  color: #000;
  font-size: 45px;
  font-weight: 700;
  padding-left: 26px;
  border-left: 5px solid #ff900e;
  margin-bottom: 24px;
}

.feature-card {
  padding: 25px 15px 15px 30px;
  background-color: #fff;
  margin-top: 30px;
  box-shadow: 0px 4px 5px -5px #72727259;
}

.card-title {
  color: #000;
  font-size: 20px;
  font-weight: 600;
  margin-bottom: 10px;
}

.feature-main-image {
  height: 980px;
}

.feature-main-image img {
  width: 100%;
  height: 100%;
}

.feature-main-image .btn-over-img {
  position: relative;
  text-align: center;
  bottom: 100px;
  right: 50px;
  width: 250px;
  height: 120px;
}

.feature-main-image .btn-over-img h1 {
  font-size: 65px;
  font-weight: 700;
}

.feature-main-image .btn-over-img p {
  font-size: 25px;
  font-weight: 500;
}

/* fact section styles  */
.facts {
  margin-bottom: 140px;
}

.fact-title {
  font-size: 45px;
  font-weight: 700;
  margin-bottom: 24px;
}

.fact-item-container {
  margin-top: 80px;
  display: flex;
  justify-content: space-around;
  align-items: center;
  text-align: center;
}

@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

.fact-item {
  padding: 30px 25px;
  border: 3px solid #ff900e;
  border-radius: 10px;
  transition: all 2s;
}

.fact-item:hover {
  transform: rotate(-60deg) translateY(50px);
  background: linear-gradient(215deg, #e1dab0, #fad179, #87e4a8);
  background-size: 180% 180%;
  animation: gradient-animation 12s ease infinite;
}

.item-title {
  color: #000;
  font-size: 45px;
  font-weight: 600;
  margin: 10px 0 5px;
}

.item-description {
  color: #727272;
  font-size: 20px;
  font-weight: 600;
}

/* our-sponsor section styles  */
.our-sponsor {
  text-align: center;
}

.sponsor-title {
  color: #000;
  font-size: 45px;
  font-weight: 700;
  margin-bottom: 24px;
}

.sponsor-container {
  margin-top: 50px;
  display: flex;
  justify-content: space-between;
}

.sponsor img {
  filter: grayscale(100%);
  width: 100%;
}

/* footer section styles */

footer {
  margin-top: 130px;
  margin-bottom: 100px;
}

.footer-text {
  font-size: 20px;
  text-align: center;
  background-color: #fff4e7;
  padding: 40px 0;
  border-radius: 5px;
}

/* responsive styles */
/* responsive styles for extra extra large devices */
@media screen and (min-width: 1400px) {
  .container {
    width: 1320px;
  }
}
/* responsive styles for extra large devices */
@media screen and (min-width: 1200px) {
  .container {
    width: 1140px;
  }
}

/* responsive styles for medium devices */
@media screen and (max-width: 991px) {
  .container {
    width: 720px;
  }

  nav {
    flex-direction: column;
    gap: 25px;
  }
  .hide {
    display: none;
  }
  .our-features {
    grid-template-columns: 1fr;
  }

  .fact-item-container {
    justify-content: center;
    flex-wrap: wrap;
    flex-direction: row;
    gap: 20px;
  }

  .sponsor-container {
    justify-content: space-evenly;
    flex-wrap: wrap;
    gap: 45px;
  }

  .sponsor {
    width: 40%;
  }
}

/* responsive styles for small devices */
@media screen and (max-width: 767px) {
  .container {
    width: 540px;
  }
  nav {
    flex-direction: column;
    gap: 25px;
  }

  .banner .banner-description {
    margin: 100px 0 35px;
  }

  .feature {
    grid-template-columns: 1fr;
    grid-row-gap: 50px;
  }

  .our-features {
    grid-template-columns: 1fr;
    grid-row-gap: 55px;
    justify-items: center;
  }

  .feature-main-image .btn-over-img {
    right: 0;
  }

  .fact-item-container {
    gap: 25px;
    flex-direction: column;
  }

  .sponsor-container {
    flex-direction: row;
    flex-wrap: wrap;
    gap: 25px;
  }
}

/* responsive styles for extra small devies  */
@media screen and (max-width: 575px) {
  .container {
    width: 100%;
  }
  nav,
  nav ul {
    gap: 20px;
    flex-direction: column;
  }

  .banner .banner-description {
    margin: 60px 0 50px;
  }

  .feature {
    grid-template-columns: 1fr;
    grid-row-gap: 50px;
    margin: 85px 0;
  }

  .our-features,
  .feature .feature-group-image {
    grid-template-columns: 1fr;
  }

  .our-features {
    margin-bottom: 0;
  }
  .feature .feature-group-image {
    justify-items: center;
  }

  .feature .feature-group-image img {
    width: 90%;
  }

  .feature-card {
    box-shadow: 0px 4px 5px 0px #72727259;
  }

  .feature-main-image {
    margin-top: 20px;
    height: auto;
  }

  .feature-main-image img {
    height: auto;
  }

  .feature-main-image .btn-over-img {
    right: 0;
  }

  .facts {
    margin-bottom: 80px;
  }

  .fact-item-container {
    margin-top: 55px;
    flex-direction: column;
    gap: 25px;
  }

  .sponsor-container {
    gap: 25px;
    flex-direction: column;
  }

  .sponsor img {
    width: 50%;
  }

  footer {
    margin-top: 60px;
    margin-bottom: 30px;
  }
}

